--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,12 @@
 language: java
 dist: trusty
+sudo: required
 
-jdk:
-  - oraclejdk8
+jdk: oraclejdk8
 
-sudo:
-  - required
 
-addons:
-  apt:
-    packages:
-    - mysql-server-5.6
-    - mysql-client-core-5.6
-    - mysql-client-5.6
+services:
+  - mysql
 
 before_script:
   - mysql -e 'DROP DATABASE IF EXISTS k_geo; CREATE DATABASE k_geo;' -uroot
