--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,17 @@
                 </executions>
             </plugin>
 
+            <!-- TESTS -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19.1</version>
+                <configuration>
+                    <includes>
+                        <include>**/*/HealthTest.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
         </plugins>
 
     </build>
