--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,8 @@ script:
 notifications:
   email:
   - herve.tchepannou@gmail.com
+
+deploy:
+  provider: heroku
+  api_key: HEROKU_API_KEY
+  app: io-tchepannou-k-geo
