--- a/src/main/resources/application-int.yml
+++ b/src/main/resources/application-int.yml
@@ -1,9 +1,9 @@
-kiosk:
-  environment: dev
-
 spring:
   datasource:
     driverClass: com.mysql.jdbc.Driver
     url: mysql://k27qxv2s50f1mliv:lb6q7c0ajxt20s6v@erxv1bzckceve5lh.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/plzw18bdix8cffxv
     username: k27qxv2s50f1mliv
     password: lb6q7c0ajxt20s6v
+
+server:
+  port: 8080
