--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
 install: true
 
 script:
-  - mvn -q install --settings settings.xml
+  - mvn -q flyway:clean flyway:migrate install --settings settings.xml
 
 notifications:
   email:
