--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ services:
 
 install: true
 
+before_script:
+  - mysql -e 'CREATE DATABASE k_geo;'
+
 script:
   - mvn -q flyway:clean flyway:migrate install --settings settings.xml
 
