--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,12 @@
 spring:
   jpa:
+    show-sql: true
     hibernate:
+      ddl-auto: none
       naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+      properties:
+        hibernate:
+          dialect: org.hibernate.dialect.MySQL5Dialect
   datasource:
     poolName: K.Geo.CP
     driverClass: com.mysql.jdbc.Driver
