--- a/src/main/resources/application-int.yml
+++ b/src/main/resources/application-int.yml
@@ -1,6 +1,8 @@
 spring:
   datasource:
     driverClass: com.mysql.jdbc.Driver
-    url: mysql://erxv1bzckceve5lh.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/plzw18bdix8cffxv
-    username: k27qxv2s50f1mliv
-    password: lb6q7c0ajxt20s6v
+    url: mysql://k.cwj11t2vidmo.us-east-1.rds.amazonaws.com:3306/k_geo
+    username: kadmin
+    password: kadmin
+
+
