--- a/src/main/resources/application-int.yml
+++ b/src/main/resources/application-int.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: mysql://k.cwj11t2vidmo.us-east-1.rds.amazonaws.com:3306/k_geo
+    url: jdbc:mysql://k.cwj11t2vidmo.us-east-1.rds.amazonaws.com:3306/k_geo
     username: kadmin
     password: kadmin
 
