--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ swagger:
   email: "herve.tchepannou@gmail.com"
   licenceType: ""
   licencePath: "#"
-  protocol: https
+  protocol: http
 
 server:
   port: 8080
